--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -1,5 +1,10 @@
 <h1 class="page-header">Register</h1>
 
+<!-- Success/Error messages -->
+<div class="show-hide-message">
+  <div :[ngClass]="messageClass">{{message}}</div>
+</div>
+
 <!-- Registration Form -->
 <form [formGroup]="form" (submit)="onRegisterSubmit()">
 
@@ -61,7 +66,7 @@
   </div>
 
   <!-- Submit Input -->
-  <input [disabled]="!form.valid" type="submit" class="btn btn-primary" value="Submit" />
+  <input [disabled]="!form.valid || isProcessing" type="submit" class="btn btn-primary" value="Submit" />
 
 </form>
 <!-- Registration Form /-->
