--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -2,9 +2,9 @@
   <h1>MEAN Stack Application</h1>
   <p class="lead">Welcome to the MEAN Stack Blog</p>
   <div>
-    <a routerLink="/register" class="btn btn-primary">Register</a>
-    <a routerLink="/login" class="btn btn-default">Login</a>
-    <a routerLink="/blog" class="btn btn-success">View Blogs</a>
+    <a *ngIf="!authService.isLoggedIn()" routerLink="/register" class="btn btn-primary">Register</a>
+    <a *ngIf="!authService.isLoggedIn()" routerLink="/login" class="btn btn-default">Login</a>
+    <a *ngIf="authService.isLoggedIn()" routerLink="/blog" class="btn btn-success">View Blogs</a>
   </div>
 </div>
 
