request delete from child component and handle in parent list component

--- a/client/src/app/components/blog/blog-list.component.html
+++ b/client/src/app/components/blog/blog-list.component.html
@@ -41,6 +41,6 @@
 
 
 <div *ngIf="!isNewPost">
-  <app-blog-post [username]="username" [blog]="blog" *ngFor="let blog of blogs">
+  <app-blog-post [username]="username" [blog]="blog" (deleteRequest)="deleteBlog($event)" *ngFor="let blog of blogs">
   </app-blog-post>
 </div>
